--- a/demos/palm/python/docs-agent/pyproject.toml
+++ b/demos/palm/python/docs-agent/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "docs-agent"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Docs Agent contributors"]
 readme = "README.md"
@@ -11,7 +11,7 @@ rich = "^13.3.5"
 Markdown = "^3.4.3"
 beautifulsoup4 = "^4.12.2"
 protobuf = ">=3.20"
-chromadb = "^0.3.21"
+chromadb = "==0.4.13"
 sentence-transformers = "^2.2.2"
 ratelimit = "^2.2.1"
 absl-py = "^1.4.0"
@@ -21,6 +21,7 @@ google-generativeai = "^0.1.0"
 grpcio = "^1.57.0"
 grpcio-tools = "^1.57.0"
 uuid = "^1.30"
+pytz = ">=2020.1"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.13.2"
