--- a/demos/palm/python/docs-agent/config.yaml
+++ b/demos/palm/python/docs-agent/config.yaml
@@ -16,6 +16,16 @@
 
 ### Configuration for Docs Agent ###
 
+### PaLM environment
+#
+# api_endpoint:    The PaLM API endpoint used by Docs Agent.
+#
+# embedding_model: The PaLM embedding model used to generate embeddings.
+#
+api_endpoint: "generativelanguage.googleapis.com"
+embedding_model: "models/embedding-gecko-001"
+
+
 ### Docs Agent environment
 #
 # product_name:    The name of your product to appears on the chatbot UI.
@@ -31,10 +41,14 @@
 # collection_name: The name used to identify a dataset collection by
 #                  the Chroma vector database.
 #
+# log_level:       The verbosity level of logs printed on the terminal
+#                  by the chatbot app: NORMAL or VERBOSE
+#
 product_name: "My product"
 output_path: "data/plain_docs"
 vector_db_dir: "vector_stores/chroma"
 collection_name: "docs_collection"
+log_level: "NORMAL"
 
 
 ### Documentation sources
@@ -70,14 +84,17 @@ input:
 # model_error_message: The error message returned to the user when language
 #                      models are unable to provide responses.
 #
-condition_text: "You are a helpful chatbot answering questions from users. Read
-the following context first and answer the question at the end:"
+condition_text: "You are a helpful chatbot answering questions from users.
+Read the context below first and answer the user's question at the end.
+In your answer, provide a summary in three or five sentences. (BUT DO NOT USE
+ANY INFORMATION YOU KNOW ABOUT THE WORLD.)"
 
-fact_check_question: "Can you compare the text below to the context provided
-in this prompt above and write a short message that warns the readers about
-which part of the text they should consider fact-checking? (Please keep your
-response concise and focus on only one important item.)"
+fact_check_question: "Can you compare the text below to the information
+provided in this prompt above and write a short message that warns the readers
+about which part of the text they should consider fact-checking? (Please keep
+your response concise, focus on only one important item, but DO NOT USE BOLD
+TEXT IN YOUR RESPONSE.)"
 
-model_error_message: "PaLM is not able to answer this question at the
-moment. Rephrase the question and try asking again."
+model_error_message: "PaLM is not able to answer this question at the moment.
+Rephrase the question and try asking again."
 
